コンテンツ更新に伴う修正